[workspace]
resolver = "2"
members = ["stylance", "stylance-cli", "internal/*"]

[workspace.dependencies]
stylance-core = { path = "./internal/stylance-core", version = "0.7.1" }
stylance-macros = { path = "./internal/stylance-macros", version = "0.7.1" }

[workspace.package]
authors = ["Mario Carbajal"]
version = "0.7.1"
license = "MIT OR Apache-2.0"
repository = "https://github.com/basro/stylance-rs"
readme = "README.md"
keywords = ["css", "css-modules", "scss", "web"]
categories = ["web-programming"]
