[workspace]
resolver = "2"
members = ["stylance", "stylance-cli", "internal/*"]

[workspace.dependencies]
stylance-core = { path = "./internal/stylance-core", version = "0.7.3" }
stylance-macros = { path = "./internal/stylance-macros", version = "0.7.3" }

[workspace.package]
authors = ["Mario Carbajal"]
version = "0.7.3"
license = "MIT OR Apache-2.0"
repository = "https://github.com/basro/stylance-rs"
readme = "README.md"
keywords = ["css", "css-modules", "scss", "web"]
categories = ["web-programming"]
