[workspace]
resolver = "2"
members = ["stylance", "stylance-cli", "internal/*"]

[workspace.dependencies]
stylance-core = { path = "./internal/stylance-core", version = "0.8.3" }
stylance-macros = { path = "./internal/stylance-macros", version = "0.8.3" }
anyhow = "1.0.79"
tempfile = "3.27.0"

[profile.dist]
inherits = "release"
lto = "fat"
strip = true
codegen-units = 1

[workspace.package]
authors = ["Mario Carbajal"]
version = "0.8.3"
license = "MIT OR Apache-2.0"
repository = "https://github.com/basro/stylance-rs"
readme = "README.md"
keywords = ["css", "css-modules", "scss", "web"]
categories = ["web-programming"]
