[package]
name = "stylance-cli"
edition = "2021"
authors.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"
description = "Cli tool for bundling stylance scoped CSS files."

[features]
default = ["binary"]
binary = ["clap", "notify", "tokio", "tokio-stream"]

[dependencies]
walkdir = "2.4.0"
stylance-core = { workspace = true }
color-eyre = "0.6.3"

clap = { version = "4.4.12", features = ["derive", "cargo"], optional = true }
notify = { version = "6.1.1", default-features = false, features = [
	"macos_kqueue",
], optional = true }
tokio = { version = "1.35.1", features = [
	"macros",
	"rt",
	"sync",
	"time",
], optional = true }
tokio-stream = { version = "0.1.14", optional = true }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }

[[bin]]
name = "stylance"
path = "./src/main.rs"
doc = false
required-features = ["binary"]
