[package]
name = "stylance-cli"
edition = "2021"
authors.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"
description = "Cli tool for bundling stylance scoped CSS files."

[features]
default = ["binary"]
binary = ["clap", "notify", "tokio", "tokio-stream"]

[dependencies]
stylance-core = { workspace = true }
anyhow = { workspace = true }

walkdir = "2.4.0"
clap = { version = "4.4.12", features = ["derive", "cargo"], optional = true }
notify = { version = "8.2.0", optional = true }
tokio = { version = "1.52.1", features = [
	"macros",
	"rt",
	"sync",
	"time",
], optional = true }
tokio-stream = { version = "0.1.18", optional = true }

[dev-dependencies]
tempfile = { workspace = true }
pretty_assertions = "1.4.1"

[[bin]]
name = "stylance"
path = "./src/main.rs"
doc = false
required-features = ["binary"]
