[package]
name = "stylance"
edition = "2021"
version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "Scoped CSS for rust projects"

[features]
nightly = ["stylance-macros/nightly"]

[dependencies]
stylance-macros = { workspace = true }

[package.metadata.stylance]
folders = ["examples"]

[package.metadata.docs.rs]
all-features = true
