[package]
name = "stylance-core"
edition = "2021"
version.workspace = true
license.workspace = true
repository.workspace = true
description = "Internal crate used by stylance"

[dependencies]
anyhow = { workspace = true }
winnow = "1.0.3"
toml = "1"
serde = { version = "1.0.194", features = ["derive"] }
siphasher = "1.0.0"

[dev-dependencies]
tempfile = { workspace = true }
serde_json = "1.0.111"
