[package]
name = "stylance-macros"
edition = "2021"
version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[features]
nightly = []

[dependencies]
stylance-core = { workspace = true }
proc-macro2 = "1.0.71"
quote = "1.0.33"
syn = { version = "2.0.43", features = ["extra-traits"] }
